connected to mlab

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,14 @@
             </div>
             <div class="factsContainer">
                 <div class="factsHeader">Facts</div>
-                <div class="facts"></div>
+                <div class="facts">
+                    <div class="factBody">
+                        <p><%= posts[0].body %></p>
+                    </div>
+                    <div class="factScore">
+                        <p><%= posts[0].score %></p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
