--- a/public/style.css
+++ b/public/style.css
@@ -131,6 +131,24 @@ aside {
 
 .factsHeader {
     font-size: 1.25rem;
-    padding: 20px;
+    padding: 1.25rem;
+}
 
+.facts {
+    display: flex;
+    border-top: 1px solid #c4c4c4;
+    border-bottom: 1px solid #c4c4c4;
+    padding: 1.25rem;
+}
+
+.factBody {
+    flex: 3;
+}
+
+.factScore {
+    flex: 1;
+}
+
+.factscore p {
+    font-size: 2.5rem;
 }
