--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,12 @@ nav div {
     cursor: pointer;
 }
 
+.signInButton:hover {
+    color: #ffffff;
+    background-color: #444444;
+    border: 2px solid #444444;
+}
+
 .addTopicButton {
     background-color: #ffffff;
     border: 2px solid #ffffff;
@@ -110,16 +116,20 @@ aside {
     display: flex;
     min-height: 100px;
     align-items: center;
+    flex-direction: row-reverse;
+    width: 75%;
+    margin-left: 20px;
 }
 
-.shareTopicButton, .newPostButton {
-    background-color: #f9f9f9;
-    border: 2px solid #f9f9f9;
+.newPostButton {
+    background-color: #f5a623;
+    border: 1px solid #f5a623;
     padding: 10px 10px;
     height: 38px;
     font-size: 100%;
     cursor: pointer;
     margin-left: 10px;
+    border-radius: 6px;
 }
 
 .factsContainer {
@@ -145,10 +155,26 @@ aside {
     flex: 3;
 }
 
+.factInfo {
+    font-size: 0.75rem;
+    margin-top: 1rem;
+    color: #afafaf;
+}
+
 .factScore {
     flex: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .factscore p {
     font-size: 2.5rem;
+}
+
+.upArrow svg, .downArrow svg {
+    width: 0.75rem;
+    height: 0.75rem;
+    cursor: pointer;
 }
