added log in page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,9 @@
             </div>
         </div>
         <div class="signIn">
-            <button class="signInButton" type="button"><span>Sign In</span></button>
+            <a href="/login">
+                <button class="signInButton" type="button"><span>Sign In</span></button>
+            </a>
         </div>
     </nav>
     <main>
