--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,7 +167,7 @@
             </div>
             <div class="newPostContainer">
                 <div class="postsHeader">New Post</div>
-                <form class="newPostForm" action="/newPost" method="POST">
+                <form class="newPostForm" action="/posts" method="POST">
                     <input type="text" name="title" id="title" placeholder="Title">
                     <select name="postType" id="postTypeDropdown" placeholder="Please select a type.">
                         <option value="">Please choose an type</option>
