--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,7 +45,7 @@
           <div class="postsHeader">Log in</div>
           <form class="loginForm" action="/users/login" method="post">
             <input type="text" name="email" id="email" placeholder="Email">
-            <input type="text" name="password" id="password" placeholder="Password">
+            <input type="password" name="password" id="password" placeholder="Password">
             <button class="loginButton">Log In</button>
             <a href="">Forgotton your password?</a>
           </form>
@@ -54,12 +54,12 @@
       <section id="signUpSection">
           <div class="loginBody">
             <div class="postsHeader">Sign Up</div>
-            <form class="signUpForm" action="/users/login" method="post">
+            <form class="signUpForm" action="/users" method="post">
               <input type="text" name="firstName" id="firstName" placeholder="First Name">
               <input type="text" name="lastName" id="lastName" placeholder="Last Name">
               <input type="text" name="email" id="email" placeholder="Email">
-              <input type="text" name="password" id="password" placeholder="Password">
-              <input type="text" name="confirmPassword" id="confirmPassword" placeholder="Please Re-Enter Password">
+              <input type="password" name="password" id="password" placeholder="Password">
+              <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Please Re-Enter Password">
               <button class="loginButton">Sign Up</button>
             </form>
           </div>
