--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
                             <p><%= posts.body %></p>
                             <div class="postsInfo">
                                 <span>
-                                    <%= posts._creator %> - <%=
+                                    <%= posts.author %> - <%=
                                     posts.createdAt.toLocaleDateString("en-US")
                                     %>
                                 </span>
