added Account button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
             <div class="signIn">
                 <a href="/logout">
                     <button class="signInButton" type="button">
-                        <span>Log Out</span>
+                        <span><%= user.firstName %> <%= user.lastName %></span>
                     </button>
                 </a>
             </div>
