added my account page

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -50,6 +50,8 @@
         <div class="loginBody">
           <div class="postsHeader">My Account</div>
           <form class="loginForm" action="/users/update" method="post">
+            <input type="text" name="firstName" id="firstName" placeholder="First Name">
+            <input type="text" name="lastName" id="lastName" placeholder="Last Name">
             <input type="text" name="email" id="email" placeholder="Email">
             <input type="password" name="password" id="password" placeholder="Password">
             <button class="loginButton">Update</button>
