--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
                     <span><%= user.firstName %> <%= user.lastName %></span>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">My Account</a> 
+                    <a href="/account">My Account</a> 
                     <a href="#">My Posts</a>
                     <a href="/logout">Log Out</a>
                 </div>
